--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
-      - uses: invertase/github-action-dart-analyzer@v2.0.0
-        with:
-          fatal-infos: true
-          fatal-warnings: true
-          working-directory: lib/**
+      - uses: blendthink/elixir@v2
+#      - uses: invertase/github-action-dart-analyzer@v2.0.0
+#        with:
+#          fatal-infos: true
+#          fatal-warnings: true
