--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
 #      - uses: blendthink/elixir@v2
+      - run: flutter pub get
       - uses: invertase/github-action-dart-analyzer@v1
 #        with:
 #          fatal-infos: true
