--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: subosito/flutter-action@v2
 #      - uses: blendthink/elixir@v2
       - run: flutter pub get
-      - uses: invertase/github-action-dart-analyzer@v1
-#        with:
-#          fatal-infos: true
-#          fatal-warnings: true
+      - uses: invertase/github-action-dart-analyzer@v2.0.0
+        with:
+          fatal-infos: true
+          fatal-warnings: true
