--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
-#      - uses: blendthink/elixir@v2
       - run: flutter pub get
+      - run: flutter --version
+#      - uses: blendthink/elixir@v2xxxx
       - uses: invertase/github-action-dart-analyzer@v2.0.0
         with:
           fatal-infos: true
