--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: subosito/flutter-action@v2
       - run: flutter --version
       - run: flutter pub get
-      - uses: blendthink/elixir@v2xxxx
+      - uses: blendthink/elixir@v2
 #      - uses: invertase/github-action-dart-analyzer@v2.0.0
 #        with:
 #          fatal-infos: true
