--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,10 @@ jobs:
   analyze: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/cache@v3
+        with:
+          path: ~/.pub-cache
+          key: ${{ runner.os }}-pub-cache-${{ hashFiles(pubspec.yaml) }}
       - uses: subosito/flutter-action@v2
       - run: flutter --version
       - uses: actions/checkout@v3
