--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: ~/.pub-cache
-          key: ${{ runner.os }}-pub-cache-${{ hashFiles('pubspec.yaml') }}
+          key: ${{ runner.os }}-pub-cache-${{ hashFiles('pubspec.lock') }}
       - uses: subosito/flutter-action@v2
       - run: flutter --version
       - uses: actions/checkout@v3
