--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,9 @@ jobs:
   analyze: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/cache@v3
-        with:
-          path: ~/.pub-cache
-          key: ${{ runner.os }}-pub-cache-${{ hashFiles('**/pubspec.lock') }}
       - uses: subosito/flutter-action@v2
+        cache: true
+        key: ${{ runner.os }}-pub-cache-${{ hashFiles('pubspec.lock') }}
       - run: flutter --version
       - uses: actions/checkout@v3
       - run: flutter pub get
