--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           cache: true
-          cache-key: ${{ runner.os }}-pub-cache-${{ hashFiles('**/pubspec.lock') }}
+#          cache-key: ${{ runner.os }}-pub-cache-${{ hashFiles('**/pubspec.lock') }}
       - run: |
           echo CACHE-PATH=${{ steps.flutter-action.outputs.CACHE-PATH }}
           echo CACHE-KEY=${{ steps.flutter-action.outputs.CACHE-KEY }}
