--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@v5
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   draft-release:
     needs: semantic-pull-request
     if: github.event_name == 'pull_request'
