ci: add permission

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -15,6 +15,7 @@ on:
 
 jobs:
   semantic-pull-request:
+    permissions: write-all
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
     steps:
