ci: make permissions global

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -13,9 +13,11 @@ on:
     branches:
       - main
 
+permissions: write-all
+
 jobs:
   semantic-pull-request:
-    permissions: write-all
+#    permissions: write-all
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
     steps:
