--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -20,16 +20,39 @@ jobs:
   semantic-pull-request:
 #    permissions: write-all
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+#    if: github.event_name == 'pull_request'
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   draft-release:
-    needs: semantic-pull-request
+    needs: [semantic-pull-request, changelog]
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - uses: release-drafter/release-drafter@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  changelog:
+#    name: Conventional Changelog Action
+    needs: semantic-pull-request
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+      - uses: "TriPSs/conventional-changelog-action@v3"
+        with:
+#          github-token: ${{ secrets.github_token }}
+#          git-message: 'chore(release): {version}'
+#          git-user-name: 'Awesome Changelog Action'
+#          git-user-email: 'awesome_changelog@github.actions.com'
+#          preset: 'angular' # default
+#          tag-prefix: 'v' # default
+#          output-file: CHANGELOG.md # default
+          release-count: '0'
+          version-file: ./pubspec.yaml
+#          version-path: 'version' # default
+          skip-on-empty: false
+#          skip-version-file: false # default
+#          skip-commit: false # default
+#          git-branch: main
