--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -40,9 +40,10 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
+      - uses: echo ${{ github.ref }}
       - uses: "TriPSs/conventional-changelog-action@v3"
         with:
-#          github-token: ${{ secrets.github_token }}
+          github-token: ${{ secrets.github_token }}
 #          git-message: 'chore(release): {version}'
 #          git-user-name: 'Awesome Changelog Action'
 #          git-user-email: 'awesome_changelog@github.actions.com'
