--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -40,7 +40,7 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
-      - uses: echo ${{ github.ref }}
+      - run: echo ${{ github.ref }}
       - uses: "TriPSs/conventional-changelog-action@v3"
         with:
           github-token: ${{ secrets.github_token }}
