--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -10,9 +10,9 @@ on:
       - edited
 
 
-#  push:
-#    branches:
-#      - main
+  push:
+    branches:
+      - main
 
 permissions: write-all
 
@@ -20,14 +20,14 @@ jobs:
   semantic-pull-request:
 #    permissions: write-all
     runs-on: ubuntu-latest
-#    if: github.event_name == 'pull_request'
+    if: github.event_name == 'pull_request'
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   draft-release:
-    needs: [semantic-pull-request]
-    if: github.event_name == 'pull_request'
+#    needs: [semantic-pull-request]
+#    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - uses: release-drafter/release-drafter@v5
