--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -1,13 +1,14 @@
 name: Upgrade Pubspec Version
 on:
   release:
-    types: [published]
+    types: [published, edited]
 
 jobs:
   upgrade-version:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: pocket-apps/action-update-version@v1
         with:
           files: pubspec.yaml
