--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -33,6 +33,12 @@ jobs:
       - uses: release-drafter/release-drafter@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v3
+      - uses: pocket-apps/action-update-version@v1
+        with:
+          files: pubspec.yaml
+          version-regexp: '\d+.\d+.\d+'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 #  changelog:
 ##    name: Conventional Changelog Action
 #    needs: semantic-pull-request
