--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -1,16 +1,19 @@
 name: Upgrade Pubspec Version
 on:
   release:
-    types: [published, edited]
+    types: [created, edited]
 
 jobs:
-  upgrade-version:
+  bump-version:
     permissions: write-all
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: pocket-apps/action-update-version@v1
-        with:
-          files: pubspec.yaml
-          version-regexp: '\d+.\d+.\d+'
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - run: echo ${{ jobs.draft-release.output.tag_name }}
+#      - uses: actions/checkout@v3
+#      - name: Create Pull Request to bump version in pubspec.yaml
+#        uses: peter-evans/create-pull-request@v5
+#      - uses: pocket-apps/action-update-version@v1
+#        with:
+#          files: pubspec.yaml
+#          version-regexp: '\d+.\d+.\d+'
+#          repo-token: ${{ secrets.GITHUB_TOKEN }}
