--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -29,8 +29,11 @@ jobs:
 #    needs: [semantic-pull-request]
 #    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
+    outputs:
+      tag_name: ${{ steps.release-drafter.outputs.tag_name }}
     steps:
       - uses: release-drafter/release-drafter@v5
+        id: release-drafter
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #  changelog:
