--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo ${{ jobs.draft-release.output.tag_name }}
+      - run: echo 'Bumping version'
 #      - uses: actions/checkout@v3
 #      - name: Create Pull Request to bump version in pubspec.yaml
 #        uses: peter-evans/create-pull-request@v5
