--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -30,7 +30,7 @@ jobs:
 #    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     outputs:
-      tag_name: ${{ steps.release-drafter.outputs.tag_name }}
+      tag: ${{ steps.release-drafter.outputs.tag_name }}
     steps:
       - name: Draft release
         uses: release-drafter/release-drafter@v5
@@ -38,7 +38,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: echo ${{ steps.release-drafter.outputs.tag_name }}
-      - run: echo $tag_name
+      - run: echo ${{ steps.release-drafter.outputs.tag }}
+#      - run: echo '::set-output name=tag::${{ steps.release-drafter.outputs.tag_name }}'
 #  changelog:
 ##    name: Conventional Changelog Action
 #    needs: semantic-pull-request
