ci: echo tag with new way

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -39,7 +39,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: echo ${{ steps.release-drafter.outputs.tag_name }}
 #      - run: echo ${{ steps.release-drafter.outputs.tag }}
-      - run: echo "::set-output name=tag::'${{ steps.release-drafter.outputs.tag_name }}'"
+#      - run: echo "::set-output name=tag::'${{ steps.release-drafter.outputs.tag_name }}'"
+      - run: echo "{tag}='${{ steps.release-drafter.outputs.tag_name }}'" >> $GITHUB_OUTPUT
         id: set-output
   log:
     needs: draft-release
