--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo 'Bumping version'
-      - run: echo ${{ jobs.draft-release.output.tag }}
+      - run: echo ${{ jobs.draft-release.outputs.tag }}
 #      - uses: actions/checkout@v3
 #      - name: Create Pull Request to bump version in pubspec.yaml
 #        uses: peter-evans/create-pull-request@v5
