--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -25,6 +25,7 @@ jobs:
       - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   draft-release:
 #    needs: [semantic-pull-request]
 #    if: github.event_name == 'pull_request'
@@ -42,11 +43,62 @@ jobs:
 #      - run: echo "::set-output name=tag::'${{ steps.release-drafter.outputs.tag_name }}'"
       - run: echo "tag='${{ steps.release-drafter.outputs.tag_name }}'" >> $GITHUB_OUTPUT
         id: set-output
-  log:
+
+  check-for-draft-release:
     needs: draft-release
     runs-on: ubuntu-latest
+    outputs:
+      draft-is-present: ${{ steps.check-for-draft-release.outputs.draft }}
+      tag: ${{ steps.check-for-draft-release.outputs.tag }}
     steps:
-      - run: echo ${{ needs.draft-release.outputs.tag }}
+      - uses: cardinalby/git-get-release-action@v1
+        id: git-get-release
+      - name: Check for draft release
+        id: check-for-draft-release
+        run: |
+          echo "draft='${{ steps.git-get-release.outputs.draft }}'" >> $GITHUB_OUTPUT
+          echo "tag='${{ steps.git-get-release.outputs.tag_name }}'" >> $GITHUB_OUTPUT
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          draft: true
+          doNotFailIfNotFound: true
+          tag: ${{ needs.draft-release.outputs.tag }}
+
+  bump-version-pr:
+    permissions: write-all
+    needs: check-for-draft-release
+    runs-on: ubuntu-latest
+    if: ${{ needs.check-for-draft-release.outputs.draft-is-present == 'true' }}
+    env:
+      TAG: ${{ needs.check-for-draft-release.outputs.tag }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - uses: tibdex/github-app-token@v1
+        id: generate-token
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.APP_PRIVATE_KEY }}
+      - name: Bump version
+        uses: mikefarah/yq@master
+        with:
+          cmd: yq -i '.version = "$TAG"' pubspec.yaml
+      - name: Create Pull Request to bump version in pubspec.yaml
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ steps.generate-token.outputs.token }}
+          branch: "bump-pubspec-version"
+          commit-message: "build: bump pubspec version to $TAG"
+          title: "build: bump pubspec version to $TAG"
+          labels: "bump-pubspec-version"
+          reviewers: "davidnwaneri"
+          assignees: "davidnwaneri"
+#  log:
+#    needs: draft-release
+#    runs-on: ubuntu-latest
+#    steps:
+#      - run: echo ${{ needs.draft-release.outputs.tag }}
 
 
 #  changelog:
