--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -51,6 +51,8 @@ jobs:
       draft-is-present: ${{ steps.check-for-draft-release.outputs.draft }}
       tag: ${{ steps.check-for-draft-release.outputs.tag }}
     steps:
+      - run: |
+          gh release list
       - uses: cardinalby/git-get-release-action@v1
         id: git-get-release
         env:
