--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -53,7 +53,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
-          gh release list
+          gh release list | grep ${{ needs.draft-release.outputs.tag }}
+          gh release list | grep -i draft
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: cardinalby/git-get-release-action@v1
