--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -55,17 +55,22 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
+          echo "Checking for draft release"
           tag=$(gh release list | grep -n $TAG)
           draft=$(gh release list | grep -in draft)
           
+          echo "Running conditionals"
           if [[ $tag == $draft ]]; then
+            echo "First conditional true"
             echo "tag=$TAG" >> $GITHUB_OUTPUT
             echo "draft=true" >> $GITHUB_OUTPUT
             exit 0
           else
+            echo "Second conditional true"
             echo "tag=$TAG" >> $GITHUB_OUTPUT
             echo "draft=false" >> $GITHUB_OUTPUT
           fi
+          echo "Finished conditionals"
         id: check-for-draft-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
