--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -56,8 +56,8 @@ jobs:
       - uses: actions/checkout@v3
       - run: |
           echo "Checking for draft release"
-          tag=$(gh release list | grep -n $TAG)
-          draft=$(gh release list | grep -in draft)
+          eval tag=$(gh release list | grep -n $TAG)
+          eval draft=$(gh release list | grep -in draft)
           
           echo "Running conditionals"
           if [[ $tag == $draft ]]; then
