--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -65,13 +65,13 @@ jobs:
           echo "Running conditionals"
           if [[ $tag == $draft ]]; then
             echo "First conditional true"
-            echo "tag=$TAG" >> $GITHUB_OUTPUT
-            echo "draft=true" >> $GITHUB_OUTPUT
+#            echo "tag=$TAG" >> $GITHUB_OUTPUT
+#            echo "draft=true" >> $GITHUB_OUTPUT
             exit 0
           else
             echo "Second conditional true"
-            echo "tag=$TAG" >> $GITHUB_OUTPUT
-            echo "draft=false" >> $GITHUB_OUTPUT
+#            echo "tag=$TAG" >> $GITHUB_OUTPUT
+#            echo "draft=false" >> $GITHUB_OUTPUT
           fi
           echo "Finished conditionals"
         id: check-for-draft-release
