--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -54,13 +54,17 @@ jobs:
       TAG: ${{ needs.draft-release.outputs.tag }}
     steps:
       - uses: actions/checkout@v3
+      - name: Run grep
+        id: grep
+
+        run: gh release list | grep -n $TAG echo
       - run: |
           echo "Checking for draft release"
           tag=$(gh release list | grep -n $TAG)
           draft=$(gh release list | grep -in draft)
           
-          eval $tag
-          eval $draft
+          echo $tag
+          echo $draft
           
           echo "Running conditionals"
           if [[ $tag == $draft ]]; then
