--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -54,10 +54,9 @@ jobs:
       TAG: ${{ needs.draft-release.outputs.tag }}
     steps:
       - uses: actions/checkout@v3
-      - name: Run grep
-        id: grep
-
-        run: gh release list | grep -n $TAG echo
+#      - name: Run grep
+#        id: grep
+#        run: gh release list | grep -n $TAG echo
       - run: |
           echo "Checking for draft release"
           tag=$(gh release list | grep -n $TAG)
