--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -52,9 +52,10 @@ jobs:
       tag: ${{ steps.check-for-draft-release.outputs.tag }}
     env:
       TAG: ${{ needs.draft-release.outputs.tag }}
+      token: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Check for draft release
         id: check-for-draft-release
         env:
