--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -18,17 +18,13 @@ permissions: write-all
 
 jobs:
   semantic-pull-request:
-#    permissions: write-all
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   draft-release:
-#    needs: [semantic-pull-request]
-#    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     outputs:
       tag: ${{ steps.set-output.outputs.tag }}
@@ -41,45 +37,41 @@ jobs:
       - run: echo ${{ steps.release-drafter.outputs.tag_name }}
       - run: echo "tag='${{ steps.release-drafter.outputs.tag_name }}'" >> $GITHUB_OUTPUT
         id: set-output
-#
-#  check-for-draft-release:
-#    needs: draft-release
-#    runs-on: ubuntu-latest
-#    outputs:
-#      draft-is-present: ${{ steps.check-for-draft-release.outputs.draft }}
-#      tag: ${{ steps.check-for-draft-release.outputs.tag }}
-##    env:
-##      TAG: ${{ needs.draft-release.outputs.tag }}
-##      token: ${{ secrets.GITHUB_TOKEN }}
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-##        with:
-#
-#      - name: Check for draft release
-#        id: check-for-draft-release
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        run: |
-#          echo 'Checking for draft release'
-#          tag=$(gh release list | grep -n $TAG)
-#          draft=$(gh release list | grep -in draft)
-#
-#          echo $tag
-#          echo $draft
-#
-#          echo "Running conditionals"
-#          if [[ $tag == $draft ]]; then
-#            echo "First conditional true"
-##            echo "tag=$TAG" >> $GITHUB_OUTPUT
-##            echo "draft=true" >> $GITHUB_OUTPUT
-#            exit 0
-#          else
-#            echo "Second conditional true"
-##            echo "tag=$TAG" >> $GITHUB_OUTPUT
-##            echo "draft=false" >> $GITHUB_OUTPUT
-#          fi
-#          echo "Finished conditionals"
+  check-for-draft-release:
+    needs: draft-release
+    runs-on: ubuntu-latest
+    outputs:
+      draft-is-present: ${{ steps.check-for-draft-release.outputs.draft }}
+      tag: ${{ steps.check-for-draft-release.outputs.tag }}
+    env:
+      TAG: ${{ needs.draft-release.outputs.tag }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Check for draft release
+        id: check-for-draft-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo 'Checking for draft release'
+          tag=$(gh release list | grep -n $TAG)
+          draft=$(gh release list | grep -in draft)
+
+          echo $tag
+          echo $draft
+
+          echo "Running conditionals"
+          if [[ $tag == $draft ]]; then
+            echo "First conditional true"
+            echo "tag=$TAG" >> $GITHUB_OUTPUT
+            echo "draft=true" >> $GITHUB_OUTPUT
+            exit 0
+          else
+            echo "Second conditional true"
+            echo "tag=$TAG" >> $GITHUB_OUTPUT
+            echo "draft=false" >> $GITHUB_OUTPUT
+          fi
+          echo "Finished conditionals"
 
 #      - uses: cardinalby/git-get-release-action@v1
 #        id: git-get-release
