ci: use releaseName

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -55,8 +55,8 @@ jobs:
         with:
           draft: true
           doNotFailIfNotFound: true
-#          releaseName: $TAG
-          tag: ${{ needs.draft-release.outputs.tag }}
+          releaseName: ${{ needs.draft-release.outputs.tag }}
+#          tag: ${{ needs.draft-release.outputs.tag }}
       - name: Check for draft release
         id: check-for-draft-release
         run: |
