--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -38,12 +38,12 @@ jobs:
       - run: echo "tag='${{ steps.release-drafter.outputs.tag_name }}'" >> $GITHUB_OUTPUT
         id: set-output
       - run: |
-          echo ${{ steps.release-drafter.outputs.id }}
-          echo ${{ steps.release-drafter.outputs.name }}
-          echo ${{ steps.release-drafter.outputs.tag_name }}
-          echo ${{ steps.release-drafter.outputs.body }}
-          echo ${{ steps.release-drafter.outputs.html_url }}
-          echo ${{ steps.release-drafter.outputs.upload_url }}
+          echo '${{ steps.release-drafter.outputs.id }}'
+          echo '${{ steps.release-drafter.outputs.name }}'
+          echo '${{ steps.release-drafter.outputs.tag_name }}'
+          echo '${{ steps.release-drafter.outputs.body }}'
+          echo '${{ steps.release-drafter.outputs.html_url }}'
+          echo '${{ steps.release-drafter.outputs.upload_url }}'
   check-for-draft-release:
     needs: draft-release
     runs-on: ubuntu-latest
