--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -28,6 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       tag: ${{ steps.set-output.outputs.tag }}
+      url: ${{ steps.set-output.outputs.url }}
     steps:
       - name: Draft release
         uses: release-drafter/release-drafter@v5
@@ -37,37 +38,69 @@ jobs:
       - run: echo ${{ steps.release-drafter.outputs.tag_name }}
       - name: Set output
         id: set-output
-        run: echo "tag='${{ steps.release-drafter.outputs.tag_name }}'" >> $GITHUB_OUTPUT
-  check-for-draft-release:
+        run: |
+          echo "tag='${{ steps.release-drafter.outputs.tag_name }}'" >> $GITHUB_OUTPUT
+          echo "url='${{ steps.release-drafter.outputs.html_url }}'" >> $GITHUB_OUTPUT
+  bump-version-pr:
+    permissions: write-all
     needs: draft-release
     runs-on: ubuntu-latest
-    outputs:
-      draft-is-present: ${{ steps.check-for-draft-release.outputs.draft }}
-      tag: ${{ steps.check-for-draft-release.outputs.tag }}
+    if: contains(needs.draft-release.outputs.url, 'untagged')
     env:
-      TAG: ${{ needs.draft-release.outputs.tag }}
+      TAG: ${{ needs.check-for-draft-release.outputs.tag }}
     steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-      - uses: cardinalby/git-get-release-action@v1
-        id: git-get-release
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - uses: tibdex/github-app-token@v1
+        id: generate-token
         with:
-          draft: true
-          doNotFailIfNotFound: true
-          releaseName: ${{ needs.draft-release.outputs.tag }}
-#          tag: ${{ needs.draft-release.outputs.tag }}
-      - name: Check for draft release
-        id: check-for-draft-release
-        run: |
-          echo "draft='${{ steps.git-get-release.outputs.draft }}'" >> $GITHUB_OUTPUT
-          echo "tag='${{ steps.git-get-release.outputs.tag_name }}'" >> $GITHUB_OUTPUT
-          echo ${{ steps.git-get-release.outputs.draft }}
-          echo ${{ steps.git-get-release.outputs.id }}
-          echo ${{ steps.git-get-release.outputs.node_id }}
-          echo ${{ steps.git-get-release.outputs.tag_name }}
-          echo ${{ steps.git-get-release.outputs.name }}
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.APP_PRIVATE_KEY }}
+      - name: Bump version
+        uses: mikefarah/yq@master
+        with:
+          cmd: yq -i '.version = "$TAG"' pubspec.yaml
+      - name: Create Pull Request to bump version in pubspec.yaml
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ steps.generate-token.outputs.token }}
+          branch: "bump-pubspec-version"
+          commit-message: "build: bump pubspec version to $TAG"
+          title: "build: bump pubspec version to $TAG"
+          labels: "bump-pubspec-version"
+          reviewers: "davidnwaneri"
+          assignees: "davidnwaneri"
+
+#  check-for-draft-release:
+#    needs: draft-release
+#    runs-on: ubuntu-latest
+#    outputs:
+#      draft-is-present: ${{ steps.check-for-draft-release.outputs.draft }}
+#      tag: ${{ steps.check-for-draft-release.outputs.tag }}
+#    env:
+#      TAG: ${{ needs.draft-release.outputs.tag }}
+#    steps:
+##      - name: Checkout code
+##        uses: actions/checkout@v3
+#      - uses: cardinalby/git-get-release-action@v1
+#        id: git-get-release
+#        env:
+#          GITHUB_TOKEN: ${{ github.token }}
+#        with:
+#          draft: true
+#          doNotFailIfNotFound: true
+#          releaseName: ${{ needs.draft-release.outputs.tag }}
+##          tag: ${{ needs.draft-release.outputs.tag }}
+#      - name: Check for draft release
+#        id: check-for-draft-release
+#        run: |
+#          echo "draft='${{ steps.git-get-release.outputs.draft }}'" >> $GITHUB_OUTPUT
+#          echo "tag='${{ steps.git-get-release.outputs.tag_name }}'" >> $GITHUB_OUTPUT
+#          echo ${{ steps.git-get-release.outputs.draft }}
+#          echo ${{ steps.git-get-release.outputs.id }}
+#          echo ${{ steps.git-get-release.outputs.node_id }}
+#          echo ${{ steps.git-get-release.outputs.tag_name }}
+#          echo ${{ steps.git-get-release.outputs.name }}
 
 #      - name: Check for draft release
 #        id: check-for-draft-release
@@ -93,51 +126,6 @@ jobs:
 #            echo "draft=false" >> $GITHUB_OUTPUT
 #          fi
 #          echo "Finished conditionals"
-
-#      - uses: cardinalby/git-get-release-action@v1
-#        id: git-get-release
-#        env:
-#          GITHUB_TOKEN: ${{ github.token }}
-#        with:
-#          draft: true
-#          doNotFailIfNotFound: true
-#          releaseName: ${{ needs.draft-release.outputs.tag }}
-##          tag: ${{ needs.draft-release.outputs.tag }}
-#      - name: Check for draft release
-#        id: check-for-draft-release
-#        run: |
-#          echo "draft='${{ steps.git-get-release.outputs.draft }}'" >> $GITHUB_OUTPUT
-#          echo "tag='${{ steps.git-get-release.outputs.tag_name }}'" >> $GITHUB_OUTPUT
-
-#  bump-version-pr:
-#    permissions: write-all
-#    needs: check-for-draft-release
-#    runs-on: ubuntu-latest
-#    if: ${{ needs.check-for-draft-release.outputs.draft-is-present == 'true' }}
-#    env:
-#      TAG: ${{ needs.check-for-draft-release.outputs.tag }}
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#      - uses: tibdex/github-app-token@v1
-#        id: generate-token
-#        with:
-#          app_id: ${{ secrets.APP_ID }}
-#          private_key: ${{ secrets.APP_PRIVATE_KEY }}
-##      - name: Bump version
-##        uses: mikefarah/yq@master
-##        with:
-##          cmd: yq -i '.version = "$TAG"' pubspec.yaml
-#      - name: Create Pull Request to bump version in pubspec.yaml
-#        uses: peter-evans/create-pull-request@v5
-#        with:
-#          token: ${{ steps.generate-token.outputs.token }}
-#          branch: "bump-pubspec-version"
-#          commit-message: "build: bump pubspec version to $TAG"
-#          title: "build: bump pubspec version to $TAG"
-#          labels: "bump-pubspec-version"
-#          reviewers: "davidnwaneri"
-#          assignees: "davidnwaneri"
 
 #  log:
 #    needs: draft-release
