--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: action
 description: A new Flutter project.
 publish_to: none
-version: 0.1.2
+version: $TAG
 environment:
   sdk: ">=3.0.3 <4.0.0"
 dependencies:
