--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -60,14 +60,14 @@ jobs:
       - name: Bump version
         uses: mikefarah/yq@master
         with:
-          cmd: yq -i '.version = $TAG' pubspec.yaml
+          cmd: yq -i '.version = "${{ env.TAG }}"' pubspec.yaml
       - name: Create Pull Request to bump version in pubspec.yaml
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ steps.generate-token.outputs.token }}
           branch: "bump-pubspec-version"
-          commit-message: "build: bump pubspec version to $TAG"
-          title: "build: bump pubspec version to $TAG"
+          commit-message: "build: bump pubspec version to '$TAG'"
+          title: "build: bump pubspec version to ${{ needs.draft-release.outputs.tag }}"
           labels: "bump-pubspec-version"
           reviewers: "davidnwaneri"
           assignees: "davidnwaneri"
