--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -60,7 +60,12 @@ jobs:
       - name: Bump version
         uses: mikefarah/yq@master
         with:
-          cmd: yq -i '.version = ["${{ env.TAG }}" | sed 's/^v//']' pubspec.yaml
+          cmd: |
+            tag="${{ env.TAG }}"
+            tag_without_v="${tag#v}"
+            echo "tag_without_v=$tag_without_v"
+            echo $tag
+            yq -i '.version = "${{ env.TAG }}"' pubspec.yaml
       - name: Create Pull Request to bump version in pubspec.yaml
         uses: peter-evans/create-pull-request@v5
         with:
