chore: replace with single quote

--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -66,7 +66,7 @@ jobs:
             echo "tag_without_v=$tag_without_v"
             echo $tag
             echo tag
-            yq -i ".version = [${{ env.TAG }}].match('^\d+\.\d+\.\d+(?:[+-]\S+)?$')" pubspec.yaml
+            yq -i '.version = [${{ env.TAG }}].match('^\d+\.\d+\.\d+(?:[+-]\S+)?$')' pubspec.yaml
       - name: Create Pull Request to bump version in pubspec.yaml
         uses: peter-evans/create-pull-request@v5
         with:
