--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -60,13 +60,8 @@ jobs:
       - name: Bump version
         uses: mikefarah/yq@master
         with:
-          cmd: |
-            tag="${{ env.TAG }}"
-            tag_without_v="${tag#v}"
-            echo "tag_without_v=$tag_without_v"
-            echo $tag
-            echo tag
-            yq -i '.version = [${{ env.TAG }}].match('^\d+\.\d+\.\d+(?:[+-]\S+)?$')' pubspec.yaml
+#          cmd: yq -i '.version = [${{ env.TAG }}] pubspec.yaml
+          cmd: yq -i '.version = (${{ env.TAG }}).match('^\d+\.\d+\.\d+(?:[+-]\S+)?$')' pubspec.yaml
       - name: Create Pull Request to bump version in pubspec.yaml
         uses: peter-evans/create-pull-request@v5
         with:
