--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -69,8 +69,8 @@ jobs:
           cmd: |
             tag=${{ env.TAG }}
             new_tag1=${tag:1}
-            new_tag2=$(echo "v1.2.3" | sed "s/[[:alpha:]]//g")
-            yq -i '.version = env(new_tag2)' pubspec.yaml
+#            new_tag2=$(echo "v1.2.3" | sed "s/[[:alpha:]]//g")
+            new_tag2="1.2.3" yq -i '.version = env(new_tag2)' pubspec.yaml
 #          cmd: yq -i '.version = ${{ env.TAG }}.match('^\d+\.\d+\.\d+(?:[+-]\S+)?$')' pubspec.yaml
       - name: Create Pull Request to bump version in pubspec.yaml
         uses: peter-evans/create-pull-request@v5
